added some load testing

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Set root logger level to DEBUG and its only appender to A1.
-log4j.rootLogger=WARN, A1, R1
+log4j.rootLogger=WARN, A1
 
 log4j.logger.com.gigya.zkms=DEBUG
 log4j.logger.org.apache.zookeeper=WARN
