--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.gigya</groupId>
+	<groupId>im.rore</groupId>
 	<artifactId>zkms</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>zkms - Zookeeper Simple Messaging System</name>
@@ -158,7 +158,7 @@
 					</descriptorRefs>
 					<archive>
 						<manifest>
-							<mainClass>com.gigya.zkms.app.Broadcaster</mainClass>
+							<mainClass>im.rore.zkms.app.Broadcaster</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
