--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
 			<artifactId>optparse_2.10</artifactId>
 			<version>2.0</version>
 		</dependency>
+		<dependency>
+  			<groupId>com.twitter</groupId>
+  			<artifactId>chill_2.10</artifactId>
+  			<version>0.3.6</version>
+		</dependency>
 	</dependencies>
 
 	<build>
